--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
         <title>Amrit Poudel-Front End developer</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <section class="navbar"></section>
+        <section class="hero"></section>
+        <section class="portfolio"></section>
+        <section class="compliments"></section>
+        <section class="contacts"></section>
+        <section class="footer"></section>
+
         
-        <script src="" async defer></script>
+        <script src="portfolio.js" async defer></script>
     </body>
 </html>
