added initial markup for navbar

--- a/index.html
+++ b/index.html
@@ -12,10 +12,24 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <section class="navbar"></section>
+        <header>
+        <nav class="nav navbar">
+            <div class="navbar-left">
+                <img src="resources/logopurple.png" alt="amrit logo" height="50px">
+                <h2 class="navbar__header-1">Amrit Poudel</h2>
+                <h4 class="navbar__header-2">Front-End Developer</h4>
+            </div>
+            <ul class="navbar-right">
+                <li class="navbar__list"><a href="#" class="navbar__link">About Me</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link">Portfolio</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link">Contact Me</a></li>
+            </ul>
+            </div>
+        </nav>
+        </header>
         <section class="hero"></section>
+        <section class="aboutMe"></section>
         <section class="portfolio"></section>
-        <section class="compliments"></section>
         <section class="contacts"></section>
         <section class="footer"></section>
 
