--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Amrit Poudel-Front End developer</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
