initial styling of navbar mobile version

--- a/index.html
+++ b/index.html
@@ -10,20 +10,27 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
-        <nav class="nav navbar">
-            <div class="navbar-left">
-                <img src="resources/logopurple.png" alt="amrit logo" height="50px">
-                <h2 class="navbar__header-1">Amrit Poudel</h2>
-                <h4 class="navbar__header-2">Front-End Developer</h4>
+        <nav class="nav">
+            <div class="nav-left">
+                <img src="resources/logopurple.png" alt="amrit logo" class="nav__img">
+                    <div class="nav-name">
+                    <h2 class="nav__header-1">Amrit Poudel</h2>
+                    <h4 class="nav__header-2">Front-End Developer</h4>
+                    </div>
+                    <div class="nav__icon">
+                        <i class="fa fa-bars"></i>
+                    </div>
             </div>
-            <ul class="navbar-right">
-                <li class="navbar__list"><a href="#" class="navbar__link">About Me</a></li>
-                <li class="navbar__list"><a href="#" class="navbar__link">Portfolio</a></li>
-                <li class="navbar__list"><a href="#" class="navbar__link">Contact Me</a></li>
+            <div class="nav-right">
+            <ul class="nav__list">
+                <li class="nav__list--item"><a href="#" class="navbar__link">About Me</a></li>
+                <li class="navbar__list--item"><a href="#" class="navbar__link">Portfolio</a></li>
+                <li class="navbar__list--item"><a href="#" class="navbar__link">Contact Me</a></li>
             </ul>
             </div>
         </nav>
