added initial markup for hero section

--- a/index.html
+++ b/index.html
@@ -14,17 +14,12 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
         <nav class="nav">
             <div class="nav-left">
                 <img src="resources/logopurple.png" alt="amrit logo" class="nav__img">
-                    <div class="nav-name">
-                    <h2 class="nav__header-1">Amrit Poudel</h2>
-                    <h4 class="nav__header-2">Front-End Developer</h4>
-                    </div>
-                    <div class="nav__icon">
-                        <i class="fa fa-bars"></i>
-                    </div>
+                <div class="nav__icon">
+                    <i class="fa fa-bars"></i>
+                </div>
             </div>
             <div class="nav-right">
             <ul class="nav__list">
@@ -34,8 +29,15 @@
             </ul>
             </div>
         </nav>
-        </header>
-        <section class="hero"></section>
+
+        <section class="hero">
+            <header class="nav-name">
+                <h2 class="nav__header-1">Amrit Poudel</h2>
+                <h4 class="nav__header-2">Front-End Developer</h4>               
+            </header>
+            <p>Hello world! I am an Enthusiast Front-End Developer and Learner.</p>
+            <button class="btn-hero">My Portfolio</button>
+        </section>
         <section class="aboutMe"></section>
         <section class="portfolio"></section>
         <section class="contacts"></section>
