hero styling initials

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="nav-right">
-            <ul class="nav__list">
+            <ul class="nav__list toggle">
                 <li class="nav__list--item"><a href="#" class="navbar__link">About Me</a></li>
                 <li class="navbar__list--item"><a href="#" class="navbar__link">Portfolio</a></li>
                 <li class="navbar__list--item"><a href="#" class="navbar__link">Contact Me</a></li>
@@ -31,12 +31,13 @@
         </nav>
 
         <section class="hero">
-            <header class="nav-name">
-                <h2 class="nav__header-1">Amrit Poudel</h2>
-                <h4 class="nav__header-2">Front-End Developer</h4>               
+            <header class="header">
+                <div class="header__background--animation"></div>
+                <h2 class="heading-1">Amrit Poudel</h2>
+                <h4 class="heading-2">Front-End Developer</h4>
+                <p>Hello world! I am an Enthusiast Front-End Developer and Learner.</p>
+                <button class="btn btn-header">My Portfolio</button>          
             </header>
-            <p>Hello world! I am an Enthusiast Front-End Developer and Learner.</p>
-            <button class="btn-hero">My Portfolio</button>
         </section>
         <section class="aboutMe"></section>
         <section class="portfolio"></section>
