initial layout markup for portfolio

--- a/index.html
+++ b/index.html
@@ -37,9 +37,18 @@
                 <h4 class="heading-2">Front-End Developer</h4>
                 <button class="btn btn-header">My Portfolio</button>          
             </header>
+        </section>        
+        <section class="portfolio">
+            <div class="portfolio__grid">
+                <div class="portfolio__card">one</div>
+                <div class="portfolio__card">two</div>
+                <div class="portfolio__card">three</div>
+                <div class="portfolio__card">four</div>
+                <div class="portfolio__card">five</div>
+                <div class="portfolio__card">six</div>
+            </div>
         </section>
         <section class="aboutMe"></section>
-        <section class="portfolio"></section>
         <section class="contacts"></section>
         <section class="footer"></section>
 
