markup changes for project grid and do styling

--- a/index.html
+++ b/index.html
@@ -40,12 +40,48 @@
         </section>        
         <section class="portfolio">
             <div class="portfolio__grid">
-                <div class="portfolio__card">one</div>
-                <div class="portfolio__card">two</div>
-                <div class="portfolio__card">three</div>
-                <div class="portfolio__card">four</div>
-                <div class="portfolio__card">five</div>
-                <div class="portfolio__card">six</div>
+                <div class="card card-1">
+                    <img src="/resources/survey-form.png" alt="survey">
+                    <div class="card__description">
+                        <h5 class="card__description--head">A survey form</h5>
+                        <p class="card__description--text"><span>Built with: </span><span>HTML</span> <span>CSS</span> <span>Javascript</span></p>
+                    </div>
+                </div>
+                <div class="card card-2">
+                    <img src="/resources/survey-form.png" alt="survey">
+                    <div class="card__description">
+                        <h5 class="card__description--head">A survey form</h5>
+                        <p class="card__description--text">a survey form built with <span>HTML</span>, <span>CSS</span>, <span>Javascript</span></p>
+                    </div>
+                </div>
+                <div class="card card-3">
+                    <img src="/resources/survey-form.png" alt="survey">
+                    <div class="card__description">
+                        <h5 class="card__description--head">A survey form</h5>
+                        <p class="card__description--text">a survey form built with <span>HTML</span>, <span>CSS</span>, <span>Javascript</span></p>
+                    </div>
+                </div>
+                <div class="card card-4">
+                    <img src="/resources/survey-form.png" alt="survey">
+                    <div class="card__description">
+                        <h5 class="card__description--head">A survey form</h5>
+                        <p class="card__description--text">a survey form built with <span>HTML</span>, <span>CSS</span>, <span>Javascript</span></p>
+                    </div>
+                </div>
+                <div class="card card-5">
+                    <img src="/resources/survey-form.png" alt="survey">
+                    <div class="card__description">
+                        <h5 class="card__description--head">A survey form</h5>
+                        <p class="card__description--text">a survey form built with <span>HTML</span>, <span>CSS</span>, <span>Javascript</span></p>
+                    </div>
+                </div>
+                <div class="card card-6">
+                    <img src="/resources/survey-form.png" alt="survey">
+                    <div class="card__description">
+                        <h5 class="card__description--head">A survey form</h5>
+                        <p class="card__description--text">a survey form built with <span>HTML</span>, <span>CSS</span>, <span>Javascript</span></p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="aboutMe"></section>
