changes in markup for heading

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
         <section class="hero">
             <header class="header">
                 <div class="header__background--animation"></div>
-                <h2 class="heading-1">Amrit Poudel</h2>
-                <h4 class="heading-2">Front-End Developer</h4>
-                <button class="btn btn-header">My Portfolio</button>          
+                <h3 class="heading-3">Hello! Nice to See You Here!</h3>
+                <h1 class="heading-1">I am Amrit Poudel</h1>
+                <h2 class="heading-2">A Front-End Developement Enthusiast</h2>
+                <button class="btn btn-header">About Me</button>          
             </header>
         </section>        
         <section class="portfolio">
