about me section initial markup

--- a/index.html
+++ b/index.html
@@ -85,9 +85,36 @@
                 </div>
             </div>
         </section>
-        <section class="aboutMe"></section>
-        <section class="contacts"></section>
-        <section class="footer"></section>
+        <section class="aboutMe">
+            <img src="resources/profilePic2.jpg" alt="amrit poudel's photo" class="aboutMe__img--profile">
+            <p class="aboutMe__story">
+                Hello, I am Amrit Poudel, graduate in Environmental Sciences from Tribhuwan University, Nepal.Since 2010, I am living in Portugal .
+                I develop user interface and user experience for web applications. 
+                I came across web development courses online in November, 2017 and fell in love with the work. since then I                 
+                have carved my own way to become a Front-End Developer. Different Internet recources has helped me in this journey.
+                and currently I am open for some oppurtunities of internship or junior Front-End developer Positions.
+                I wish to grow as a complete Front-End Expert in Coming days and eventually to a Full-stack developer.
+               
+                The tools I use in Front-End Developement are:
+                <span>HTML5</span>,
+                <span>CSS3</span>,
+                <span>SASS</span>,
+                <span>Javascript</span>,
+                <span>React.js</span>,
+                <span>Express.Js</span>,
+                <span>MongoDB</span>,
+                <span>Node.Js</span>,
+                <span>JQuery</span>,
+                <span>Bootstrap</span>, and always on to learn new technologies.
+            </p>
+        </section>
+        <section class="contacts">
+            contact Me
+            social media
+        </section>
+        <section class="footer">
+            copyright
+        </section>
 
         
         <script src="portfolio.js" async defer></script>
