changes in card description

--- a/index.html
+++ b/index.html
@@ -52,41 +52,41 @@
                     <img src="/resources/survey-form.png" alt="survey">
                     <div class="card__description">
                         <h5 class="card__description--head">A survey form</h5>
-                        <p class="card__description--text">a survey form built with <span>HTML</span>, <span>CSS</span>, <span>Javascript</span></p>
+                        <p class="card__description--text">a survey form built with <span>HTML</span> <span>CSS</span> <span>Javascript</span></p>
                     </div>
                 </div>
                 <div class="card card-3">
                     <img src="/resources/survey-form.png" alt="survey">
                     <div class="card__description">
                         <h5 class="card__description--head">A survey form</h5>
-                        <p class="card__description--text">a survey form built with <span>HTML</span>, <span>CSS</span>, <span>Javascript</span></p>
+                        <p class="card__description--text">a survey form built with <span>HTML</span> <span>CSS</span> <span>Javascript</span></p>
                     </div>
                 </div>
                 <div class="card card-4">
                     <img src="/resources/survey-form.png" alt="survey">
                     <div class="card__description">
                         <h5 class="card__description--head">A survey form</h5>
-                        <p class="card__description--text">a survey form built with <span>HTML</span>, <span>CSS</span>, <span>Javascript</span></p>
+                        <p class="card__description--text">a survey form built with <span>HTML</span> <span>CSS</span> <span>Javascript</span></p>
                     </div>
                 </div>
                 <div class="card card-5">
                     <img src="/resources/survey-form.png" alt="survey">
                     <div class="card__description">
                         <h5 class="card__description--head">A survey form</h5>
-                        <p class="card__description--text">a survey form built with <span>HTML</span>, <span>CSS</span>, <span>Javascript</span></p>
+                        <p class="card__description--text">a survey form built with <span>HTML</span> <span>CSS</span> <span>Javascript</span></p>
                     </div>
                 </div>
                 <div class="card card-6">
                     <img src="/resources/survey-form.png" alt="survey">
                     <div class="card__description">
                         <h5 class="card__description--head">A survey form</h5>
-                        <p class="card__description--text">a survey form built with <span>HTML</span>, <span>CSS</span>, <span>Javascript</span></p>
+                        <p class="card__description--text">a survey form built with <span>HTML</span> <span>CSS</span> <span>Javascript</span></p>
                     </div>
                 </div>
             </div>
         </section>
         <section class="aboutMe">
-            <img src="resources/profilePic2.jpg" alt="amrit poudel's photo" class="aboutMe__img--profile">
+            <img src="resources/profilePic2.jpg" alt="amrit poudel's photo" class="aboutMe__img--profile" height="100px">
             <p class="aboutMe__story">
                 Hello, I am Amrit Poudel, graduate in Environmental Sciences from Tribhuwan University, Nepal.Since 2010, I am living in Portugal .
                 I develop user interface and user experience for web applications. 
@@ -107,13 +107,46 @@
                 <span>JQuery</span>,
                 <span>Bootstrap</span>, and always on to learn new technologies.
             </p>
+            <div>
+                <p>Some of my Certificates:</p>
+                <div>
+                   Certificate 1
+                </div>
+                <div>
+                   Certificate 2
+                </div>
+                <div>
+                   Certificate 3
+                </div>
+                <div>
+                   Certificate 4
+                </div>
+                <div>
+                   Certificate 5
+                </div>
+                <div>
+                   Certificate 6
+                </div>
+
+            </div>
         </section>
         <section class="contacts">
-            contact Me
-            social media
+            <div class="contacts__direct"></div>
+            <div class="contacts__social">
+                <div>GitHub</div>
+                <div>LinkedIn</div>
+                <div>Twitter</div>
+                <div>Facebook</div>
+            </div>
         </section>
         <section class="footer">
-            copyright
+            <div> &copy; Amrit Poudel,  Lisboa, Portugal, 2019. </div>
+            <div class="footer__social">
+                <div>GitHub</div>
+                <div>LinkedIn</div>
+                <div>Twitter</div>
+                <div>Facebook</div>
+            </div>
         </section>
 
         
