edited markup for inserting social media icons in hero

--- a/index.html
+++ b/index.html
@@ -31,13 +31,19 @@
         </nav>
 
         <section class="hero">
-            <header class="header">
+            <header class="hero__header">
                 <div class="header__background--animation"></div>
                 <h3 class="heading-3">Hello! Nice to See You Here!</h3>
                 <h1 class="heading-1">I am Amrit Poudel</h1>
                 <h2 class="heading-2">A Front-End Developement Enthusiast</h2>
                 <button class="btn btn-header">About Me</button>          
             </header>
+            <div class="hero__social">
+                    <div class="hero__social--github"><i class="fab fa-github-square"></i></div>
+                    <div class="hero__social--linkedin"><i class="fab fa-linkedin"></i></div>
+                    <div class="hero__social--twitter"><i class="fab fa-twitter-square"></i></div>
+                    <div class="hero__social--facebook"><i class="fab fa-facebook-square"></i></div>
+            </div>
         </section>        
         <section class="portfolio">
             <div class="portfolio__grid">
@@ -87,14 +93,15 @@
         </section>
         <section class="aboutMe">
             <img src="resources/profilePic2.jpg" alt="amrit poudel's photo" class="aboutMe__img--profile" height="100px">
-            <p class="aboutMe__story">
-                Hello, I am Amrit Poudel, graduate in Environmental Sciences from Tribhuwan University, Nepal.Since 2010, I am living in Portugal .
-                I develop user interface and user experience for web applications. 
-                I came across web development courses online in November, 2017 and fell in love with the work. since then I                 
-                have carved my own way to become a Front-End Developer. Different Internet recources has helped me in this journey.
-                and currently I am open for some oppurtunities of internship or junior Front-End developer Positions.
-                I wish to grow as a complete Front-End Expert in Coming days and eventually to a Full-stack developer.
-               
+            <div class="aboutMe__story">
+            <p>
+                Born in Nepal and a Resident in Portugal since 2010, 
+                I found my interest inclined towards web app development at the end of 2017 and since then I started playing with HTML CSS and Javascript.
+                I enjoy learning new technologies and has the aim of becoming an expert in Front-End Web Development.
+                FreeCodeCamp, Udemy, Khan Academy, Scrimba, Medium, Youtube and lots of other Internet Sources are my Gurus in my mission. 
+                At this point in time, I am looking for a company to grow with, in developing a better web world.
+            </p>
+            <p>               
                 The tools I use in Front-End Developement are:
                 <span>HTML5</span>,
                 <span>CSS3</span>,
@@ -107,6 +114,7 @@
                 <span>JQuery</span>,
                 <span>Bootstrap</span>, and always on to learn new technologies.
             </p>
+            </div>
             <div>
                 <p>Some of my Certificates:</p>
                 <div>
@@ -127,20 +135,11 @@
                 <div>
                    Certificate 6
                 </div>
-
-            </div>
-        </section>
-        <section class="contacts">
-            <div class="contacts__direct"></div>
-            <div class="contacts__social">
-                <div>GitHub</div>
-                <div>LinkedIn</div>
-                <div>Twitter</div>
-                <div>Facebook</div>
+                <Button>Contact Me! &#9993;</Button>
             </div>
         </section>
         <section class="footer">
-            <div> &copy; Amrit Poudel,  Lisboa, Portugal, 2019. </div>
+            <div> &copy; Amrit Poudel,  Lisbon, Portugal, 2019. </div>
             <div class="footer__social">
                 <div>GitHub</div>
                 <div>LinkedIn</div>
