add markup and style navbar toggle  list

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 </div>
             </div>
             <div class="nav-right">
-            <ul class="nav__list toggle">
-                <li class="nav__list--item"><a href="#" class="navbar__link">About Me</a></li>
-                <li class="navbar__list--item"><a href="#" class="navbar__link">Portfolio</a></li>
-                <li class="navbar__list--item"><a href="#" class="navbar__link">Contact Me</a></li>
-            </ul>
+                <ul class="nav__list toggle">
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact Me</a></li>
+                </ul>
             </div>
         </nav>
 
