footer markup altered and styling done

--- a/index.html
+++ b/index.html
@@ -139,13 +139,18 @@
             </div>
         </section>
         <section class="footer">
-            <div> &copy; Amrit Poudel,  Lisbon, Portugal, 2019. </div>
+            <ul class="footer__nav">
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact Me</a></li>
+            </ul>          
             <div class="footer__social">
-                <div>GitHub</div>
-                <div>LinkedIn</div>
-                <div>Twitter</div>
-                <div>Facebook</div>
+                <div class="footer__social--github"><i class="fab fa-github-square"></i><div>GitHub</div></div>
+                <div class="footer__social--linkedin"><i class="fab fa-linkedin"></i><div>LinkedIn</div></div>
+                <div class="footer__social--twitter"><i class="fab fa-twitter-square"></i><div>Twitter</div></div>
+                <div class="footer__social--facebook"><i class="fab fa-facebook-square"></i><div>Facebook</div></div>
             </div>
+            <div class="footer__copy"> &copy; Amrit Poudel,  Lisbon, Portugal, 2019. </div>
         </section>
 
         
