add markup for about Me and certificate section and add certificate images

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <ul class="nav__list toggle">
                     <li><a href="#">About Me</a></li>
                     <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Cerificates</a></li>
                     <li><a href="#">Contact Me</a></li>
                 </ul>
             </div>
@@ -91,53 +92,64 @@
                 </div>
             </div>
         </section>
-        <section class="aboutMe">
-            <img src="resources/profilePic2.jpg" alt="amrit poudel's photo" class="aboutMe__img--profile" height="100px">
+        <section class="aboutMe">  
+            <h2 class="heading-2">About Me</h2>         
             <div class="aboutMe__story">
-            <p>
-                Born in Nepal and a Resident in Portugal since 2010, 
-                I found my interest inclined towards web app development at the end of 2017 and since then I started playing with HTML CSS and Javascript.
-                I enjoy learning new technologies and has the aim of becoming an expert in Front-End Web Development.
-                FreeCodeCamp, Udemy, Khan Academy, Scrimba, Medium, Youtube and lots of other Internet Sources are my Gurus in my mission. 
-                At this point in time, I am looking for a company to grow with, in developing a better web world.
-            </p>
-            <p>               
-                The tools I use in Front-End Developement are:
-                <span>HTML5</span>,
-                <span>CSS3</span>,
-                <span>SASS</span>,
-                <span>Javascript</span>,
-                <span>React.js</span>,
-                <span>Express.Js</span>,
-                <span>MongoDB</span>,
-                <span>Node.Js</span>,
-                <span>JQuery</span>,
-                <span>Bootstrap</span>, and always on to learn new technologies.
-            </p>
+                <img src="resources/profilePic2.jpg" alt="amrit poudel's photo" class="aboutMe__img--profile" height="100px">
+                <p>
+                    Born in Nepal, a graduate in Environment Science and a Resident in Portugal since 2010, 
+                    I found my interest inclined towards web app development at the end of 2017 and since then I started playing with HTML CSS and Javascript.
+                    I enjoy learning new technologies and has the aim of becoming an expert in Front-End Web Development.
+                </p>
+                <p>
+                    FreeCodeCamp, Udemy, Khan Academy, Scrimba, Medium, Youtube and lots of other Internet Sources are my Gurus in my mission. 
+                    At this point in time, I am looking for a company to grow with, in developing a better web world.
+                
+                </p>
+                <p>               
+                    The tools I use in Front-End Developement are:
+                    <span>HTML5</span>,
+                    <span>CSS3</span>,
+                    <span>SASS</span>,
+                    <span>Javascript</span>,
+                    <span>React.js</span>,
+                    <span>Express.Js</span>,
+                    <span>MongoDB</span>,
+                    <span>Node.Js</span>,
+                    <span>JQuery</span>,
+                    <span>Bootstrap</span>, and always on to learn new technologies.
+                </p>
             </div>
-            <div>
-                <p>Some of my Certificates:</p>
-                <div>
-                   Certificate 1
-                </div>
-                <div>
-                   Certificate 2
-                </div>
-                <div>
-                   Certificate 3
-                </div>
-                <div>
-                   Certificate 4
-                </div>
-                <div>
-                   Certificate 5
-                </div>
-                <div>
-                   Certificate 6
-                </div>
-                <Button>Contact Me! &#9993;</Button>
-            </div>
+            <Button class="btn-contactMe btn">Contact Me! &#9993;</Button>
         </section>
+        <section class="certificate-box">           
+            <h2 class="certificate-box__heading">Some of my Certificates</h2>
+            <div class="certificates-list">               
+                <div class="certificate">
+                <img src="/resources/certificates/sololearn-html.jpg" alt="sololearn Html certificate"> 
+                </div>                
+                <div class="certificate">
+                    <img src="/resources/certificates/sololearn-css.jpg" alt="">
+                </div>
+                <div class="certificate">
+                    <img src="/resources/certificates/sololearn-javascript.jpg" alt="">
+                </div>
+                <div class="certificate">
+                    <img src="/resources/certificates/udemy-advanced-sass.jpg" alt="">  
+                </div>
+                <div class="certificate">
+                    <img src="/resources/certificates/udemy-webdesign.jpg" alt="">
+                </div>
+                <div class="certificate">
+                    <img src="/resources/certificates/udemy-javascript.jpg" alt="">
+                </div>
+                <div class="certificate">
+                    <img src="/resources/certificates/fcc-responsive.PNG" alt=""> 
+                </div>
+            </div>         
+
+        </section>
+        
         <section class="footer">
             <ul class="footer__nav">
                 <li><a href="#">About Me</a></li>
