edited footer to insert email

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
         </section>
         
         <section class="footer">
-            <ul class="footer__nav">
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact Me</a></li>
-            </ul>          
+            
+            <div class="footer__nav">
+                <h3 class="heading">Contact:</h3>
+               <p>Email: amritpoudel11@gmail</p>
+            </div>          
             <div class="footer__social">
                 <div class="footer__social--github"><i class="fab fa-github-square"></i><div>GitHub</div></div>
                 <div class="footer__social--linkedin"><i class="fab fa-linkedin"></i><div>LinkedIn</div></div>
