--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
             <div class="footer__copy"> &copy; Amrit Poudel,  Lisbon, Portugal, 2019. </div>
         </section>
 
-        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.all.min.js"></script>
+       
         <script src="portfolio.js" async defer></script>
     </body>
 </html>
