--- a/index.html
+++ b/index.html
@@ -52,44 +52,11 @@
                     <img src="/resources/survey-form.png" alt="survey">
                     <div class="card__description">
                         <h5 class="card__description--head">A survey form</h5>
-                        <p class="card__description--text"><span>Built with: </span><span>HTML</span> <span>CSS</span> <span>Javascript</span></p>
+                        <p class="card__description--text">for FreeCodeCamp Responsive design project</p>
+                        <p class="card__description--text">Built with: HTML, CSS, Javascript</p>
                     </div>
                 </div>
-                <div class="card card-2">
-                    <img src="/resources/survey-form.png" alt="survey">
-                    <div class="card__description">
-                        <h5 class="card__description--head">A survey form</h5>
-                        <p class="card__description--text">a survey form built with <span>HTML</span> <span>CSS</span> <span>Javascript</span></p>
-                    </div>
-                </div>
-                <div class="card card-3">
-                    <img src="/resources/survey-form.png" alt="survey">
-                    <div class="card__description">
-                        <h5 class="card__description--head">A survey form</h5>
-                        <p class="card__description--text">a survey form built with <span>HTML</span> <span>CSS</span> <span>Javascript</span></p>
-                    </div>
-                </div>
-                <div class="card card-4">
-                    <img src="/resources/survey-form.png" alt="survey">
-                    <div class="card__description">
-                        <h5 class="card__description--head">A survey form</h5>
-                        <p class="card__description--text">a survey form built with <span>HTML</span> <span>CSS</span> <span>Javascript</span></p>
-                    </div>
-                </div>
-                <div class="card card-5">
-                    <img src="/resources/survey-form.png" alt="survey">
-                    <div class="card__description">
-                        <h5 class="card__description--head">A survey form</h5>
-                        <p class="card__description--text">a survey form built with <span>HTML</span> <span>CSS</span> <span>Javascript</span></p>
-                    </div>
-                </div>
-                <div class="card card-6">
-                    <img src="/resources/survey-form.png" alt="survey">
-                    <div class="card__description">
-                        <h5 class="card__description--head">A survey form</h5>
-                        <p class="card__description--text">a survey form built with <span>HTML</span> <span>CSS</span> <span>Javascript</span></p>
-                    </div>
-                </div>
+                
             </div>
         </section>
         <section class="aboutMe">  
