added some certificates and projects screenshot in markup

--- a/index.html
+++ b/index.html
@@ -49,11 +49,59 @@
         <section class="portfolio">
             <div class="portfolio__grid">
                 <div class="card card-1">
-                    <img src="/resources/survey-form.png" alt="survey">
+                    <img src="/resources/portfolio-screenshots/fccLisbon.PNG" alt="fcc lisbon landing page">
                     <div class="card__description">
-                        <h5 class="card__description--head">A survey form</h5>
-                        <p class="card__description--text">for FreeCodeCamp Responsive design project</p>
-                        <p class="card__description--text">Built with: HTML, CSS, Javascript</p>
+                        <h5 class="card__description--head">FreeCodeCamp-Lisbon Landing Page</h5>
+                        <p class="card__description--text">Built navbar, Hero section and footer as a team project in FreeCodeCamp-Lisbon</p>
+                        <p class="card__description--text">Tools: HTML, CSS, Bootstrap, Javascript, JQuery</p>
+                    </div>
+                </div>
+                <div class="card card-2">
+                    <img src="/resources/portfolio-screenshots/natour.PNG" alt="natour tour landing page">
+                    <div class="card__description">
+                        <h5 class="card__description--head">Natour - A tavel web site</h5>
+                        <p class="card__description--text">for advanced css/sass course in Udemy by Jonas Schmedtmann</p>
+                        <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
+                    </div>
+                </div>
+                <div class="card card-3">
+                    <img src="/resources/portfolio-screenshots/nexter-amrit.PNG" alt="nexter project landing page">
+                    <div class="card__description">
+                        <h5 class="card__description--head">Nexter - A Real estate business site</h5>
+                        <p class="card__description--text">for advanced css/sass course in Udemy by Jonas Schmedtmann</p>
+                        <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
+                    </div>
+                </div>
+                <div class="card card-4">
+                    <img src="/resources/portfolio-screenshots/randomQuote.PNG" alt="random quote generator">
+                    <div class="card__description">
+                        <h5 class="card__description--head">Random Quote Generator</h5>
+                        <p class="card__description--text">for freecodecamp project</p>
+                        <p class="card__description--text">Tools: HTML, CSS, Javascript, JQuery</p>
+                    </div>
+                </div>
+                <div class="card card-5">
+                    <img src="/resources/portfolio-screenshots/rgbGame.PNG" alt="guess the Rgb color game">
+                    <div class="card__description">
+                        <h5 class="card__description--head">RGB guess the color game</h5>
+                        <p class="card__description--text">for web development course in Udemy by Colt Steele</p>
+                        <p class="card__description--text">Tools: HTML, CSS, Javascript, JQuery</p>
+                    </div>
+                </div>
+                <div class="card card-6">
+                    <img src="/resources/portfolio-screenshots/trillo-amrit.PNG" alt="trillo page">
+                    <div class="card__description">
+                        <h5 class="card__description--head">Trillo-a hotel review page</h5>
+                        <p class="card__description--text">for advanced css/sass course in Udemy by Jonas Schmedtmann</p>
+                        <p class="card__description--text">Tools: HTML, CSS, SASS/SCSS</p>
+                    </div>
+                </div>
+                <div class="card card-7">
+                    <img src="/resources/portfolio-screenshots/wikiViewer.PNG" alt="wikipedia search and view app">
+                    <div class="card__description">
+                        <h5 class="card__description--head">WikiViewer</h5>
+                        <p class="card__description--text">for FreeCodeCamp project</p>
+                        <p class="card__description--text">Tools: HTML, CSS, Javascript, JQuery</p>
                     </div>
                 </div>
                 
@@ -62,7 +110,7 @@
         <section class="aboutMe">  
             <h2 class="heading-2">About Me</h2>         
             <div class="aboutMe__story">
-                <img src="resources/profilePic2.jpg" alt="amrit poudel's photo" class="aboutMe__img--profile" height="100px">
+                <img src="resources/profilePic2.jpg" alt="amrit poudel's photo" class="aboutMe__img--profile">
                 <p>
                     Born in Nepal, a graduate in Environment Science and a Resident in Portugal since 2010, 
                     I found my interest inclined towards web app development at the end of 2017 and since then I started playing with HTML CSS and Javascript.
@@ -91,15 +139,9 @@
         </section>
         <section class="certificate-box">           
             <h2 class="certificate-box__heading">Some of my Certificates</h2>
-            <div class="certificates-list">               
+            <div class="certificates-list"> 
                 <div class="certificate">
-                <img src="/resources/certificates/sololearn-html.jpg" alt="sololearn Html certificate"> 
-                </div>                
-                <div class="certificate">
-                    <img src="/resources/certificates/sololearn-css.jpg" alt="">
-                </div>
-                <div class="certificate">
-                    <img src="/resources/certificates/sololearn-javascript.jpg" alt="">
+                    <img src="/resources/certificates/fcc-responsive.PNG" alt=""> 
                 </div>
                 <div class="certificate">
                     <img src="/resources/certificates/udemy-advanced-sass.jpg" alt="">  
@@ -109,9 +151,21 @@
                 </div>
                 <div class="certificate">
                     <img src="/resources/certificates/udemy-javascript.jpg" alt="">
+                </div>          
+                <div class="certificate">
+                <img src="/resources/certificates/sololearn-html.jpg" alt="sololearn Html certificate"> 
+                </div>                
+                <div class="certificate">
+                    <img src="/resources/certificates/sololearn-css.jpg" alt="">
                 </div>
                 <div class="certificate">
-                    <img src="/resources/certificates/fcc-responsive.PNG" alt=""> 
+                    <img src="/resources/certificates/sololearn-javascript.jpg" alt="">
+                </div>               
+                <div class="certificate">
+                    <img src="/resources/certificates/mangodbuni.PNG" alt="">
+                </div>               
+                <div class="certificate">
+                    <img src="/resources/certificates/5dcc.PNG" alt=""> 
                 </div>
             </div>         
 
