added portfolio heading

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>
         </section>        
         <section class="portfolio">
+            <h2 class="portfolio__heading">My Portfolio</h2>
             <div class="portfolio__grid">
                 <div class="card card-1">
                     <img src="/resources/portfolio-screenshots/fccLisbon.PNG" alt="fcc lisbon landing page">
@@ -184,10 +185,7 @@
                 <div class="footer__social--facebook"><i class="fab fa-facebook-square"></i><div>Facebook</div></div>
             </div>
             <div class="footer__copy"> &copy; Amrit Poudel,  Lisbon, Portugal, 2019. </div>
-        </section>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.all.min.js"></script>
-       
+        </section>       
         <script src="portfolio.js" async defer></script>
     </body>
 </html>
